services/authentik/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.cluster.wool.homes`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: authentik-server
          port: 80
  tls: {}
